--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_S3_BUCKET=cloudmints-storage-prod
 
 # Admin Portal Credentials
+ADMIN_URL=admin.cloudmints.in
 ADMIN_EMAIL=admin@cloudmints.in
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=CloudM1nts@Admin2024!
